--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -11,6 +11,8 @@ jobs:
   build:
     name: Build Collection Artifact
     runs-on: ubuntu-latest
+    outputs:
+      run_id: ${{ github.run_id }}  # Output the run-id to be used later
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
