--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -48,7 +48,7 @@ jobs:
         with:
           name: collection-tarball
           path: dist/
-          debug: true 
+          run-id: ${{ github.event.workflow_run.run_id }}
 
       - name: Extract .tar.gz from .zip
         run: |
