--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -55,9 +55,7 @@ jobs:
 
       - name: Publish to Ansible Galaxy
         run: |
-          # Find the extracted .tar.gz file (dynamic filename)
           COLLECTION_FILE=$(ls *.tar.gz)
           echo "Found collection file: $COLLECTION_FILE"
-
-          # Publish to Ansible Galaxy using the extracted tarball
-          ansible-galaxy collection publish "$COLLECTION_FILE" --token ${{ secrets.ANSIBLE_GALAXY_API_KEY }} 
+          ansible-galaxy collection publish "$COLLECTION_FILE" --token "${{ secrets.ANSIBLE_GALAXY_API_KEY }}"
+       
