--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -57,5 +57,5 @@ jobs:
         run: |
           COLLECTION_FILE=$(ls *.tar.gz)
           echo "Found collection file: $COLLECTION_FILE"
-          ansible-galaxy collection publish "$COLLECTION_FILE" --token "${{ secrets.ANSIBLE_GALAXY_API_KEY }}"
+          ansible-galaxy collection publish "$COLLECTION_FILE" --token "${{ secrets.ANSIBLE_COLLECTIONS_TOKEN }}"
        
