--- a/playbooks/vsp_direct/truecopy.yml
+++ b/playbooks/vsp_direct/truecopy.yml
@@ -198,10 +198,12 @@
       ansible.builtin.debug:
         var: result
 
-    ##########################################################################
+
+    ##############################################################################
     # Task 9 : Swap-Split TrueCopy pair by copy_group_name and copy_pair_name
-    #          Storages need to be swapped before swap-split operation. Please specify       connection_info and secondary_connection_info accordingly.
-    ##########################################################################
+    #          Storages need to be swapped before swap-split operation. Please 
+    #          specify connection_info and secondary_connection_info accordingly. 
+    ##############################################################################
     - name: Swap-Split TrueCopy pair
       hitachivantara.vspone_block.vsp.hv_truecopy:
         connection_info: "{{ secondary_connection_info }}" # Remote Storage connection details
@@ -219,10 +221,11 @@
       ansible.builtin.debug:
         var: result
 
-    ##########################################################################
+    ###################################################################################
     # Task 10 : Swap-Split TrueCopy pair
-    #          Storages need to be swapped before swap-split operation. Please specify       connection_info and secondary_connection_info accordingly.
-    ##########################################################################
+    #          Storages need to be swapped before swap-split operation. Please specify
+    #          connection_info and secondary_connection_info accordingly.
+    ###################################################################################
     - name: Swap-Split TrueCopy pair
       hitachivantara.vspone_block.vsp.hv_truecopy:
         connection_info: "{{ secondary_connection_info }}" # Remote Storage connection details
@@ -243,7 +246,8 @@
 
     #####################################################################################
     # Task 11 : Swap-Split TrueCopy pair by copy_group_name and primary volume ID
-    #          Storages need to be swapped before swap-split operation. Please specify       connection_info and secondary_connection_info accordingly.
+    #          Storages need to be swapped before swap-split operation. Please specify
+    #          connection_info and secondary_connection_info accordingly.
     #####################################################################################
     - name: Swap-Split TrueCopy pair
       hitachivantara.vspone_block.vsp.hv_truecopy:
