--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -1,103 +1,112 @@
-ancestor: null
+ancestor: 2.0.0
 releases:
   3.2.0:
-    release_date: '2025-02-20'
+    release_summary: "This is a minor release of the ``hitachivantara.vspone_block`` collection. This changelog includes all new modules that are added to the collection. This also contains all changes to the modules and plugins in this collection that have been made after the previous release."
+    release_date: "2025-02-20"
     changes:
-      major_changes:
-        - "Added module hv_cmd_dev"
-        - "Added module hv_disk_drive_facts"
-        - "Added module hv_disk_drive"
-        - "Added module hv_journal_volume_facts"
-        - "Added module hv_journal_volume"
-        - "Added module hv_nvm_subsystems"
-        - "Added module hv_paritygroup"
-        - "Added module hv_remote_copy_group_facts"
-        - "Added module hv_remote_copy_group"
-        - "Added module hv_remote_storage_registration_facts"
-        - "Added module hv_remote_storage_registration"
-        - "Added module hv_resource_group_facts"
-        - "Added module hv_resource_group_lock"
-        - "Added module hv_resource_group"
-        - "Added module hv_snapshot_group_facts"
-        - "Added module hv_snapshot_group"
       minor_changes:
-        - "hv_gad_facts: Renamed module from hv_gad_fact to hv_gad_facts; Added GAD Pair facts for direct connection type"
-        - "hv_gad: Added multiple operations for GAD Pair for direct connection type; Increased GAD Pair Volumes size support; SVOL naming enhancements"
-        - "hv_hg: Added auto-generated name for Create hostgroup task"
-        - "hv_hur_fact: Added HUR Pair facts for direct connection type"
-        - "hv_hur: Added multiple operations for HUR Pair for direct connection type; Increased HUR Pair Volumes size support"
-        - "hv_iscsi_target: Added auto-generated name for Create iSCSI target task"
-        - "hv_ldev_facts: Added encryption status in LDEV facts"
-        - "hv_ldev: Added QoS settings and Shredding option; Enhanced LDEV ID settings"
-        - "hv_snapshot: Enhanced SVOL naming logic"
-        - "hv_storagepool_facts: Added encryption status"
-        - "hv_system_facts: Added refresh parameter"
-        - "hv_truecopy_fact: Added TrueCopy Pair facts for direct connection type"
-        - "hv_truecopy: Added multiple operations for TrueCopy Pair for direct connection type; Enhanced SVOL ID settings"
-        - "others: Enhanced log messages; Added warnings for unsupported OOB features; Usage information collection to AWS with user consent; Renamed modules: hv_gateway_subscriber_fact -> hv_gateway_subscriber_facts, hv_uaig_token_fact -> hv_uaig_token_facts"
+        - The following modules are added to the collection:
+            - hv_cmd_dev: This module is used to create, update, and delete command devices.
+            - hv_disk_drive: This module is used to change disk drive settings.
+            - hv_journal_volume: This module is used to create, update, and delete journal volumes.
+            - hv_nvm_subsystems: This module is used to create, update, and delete NVM subsystems.
+            - hv_paritygroup: This module is used to create, update, and delete parity group.
+            - hv_remote_copy_group: This module is used to create, update, and delete remote copy groups.
+            - hv_remote_storage_registration: This module is used to manage remote storage registration and un-registration.
+            - hv_resource_group_lock: This module is used to lock and unlock resource groups.
+            - hv_resource_group: This module is used to create, update, and delete resource groups.
+            - hv_snapshot_group: This module is used to create, update, and delete snapshots in units of snapshot groups.
+        - The following facts modules are added in the collection:
+            - hv_disk_drive_facts: This module is used to get facts about disk drives.
+            - hv_journal_volume_facts: This module is used to get facts about journal volumes.
+            - hv_remote_copy_group_facts: This module is used to get facts about remote copy groups.
+            - hv_remote_storage_registration_facts: This module is used to get facts about remote storage registration.
+            - hv_resource_group_facts: This module is used to get facts about resource groups.
+            - hv_snapshot_group_facts: This module is used to get facts about snapshots in units of snapshot groups.
+        - The following modules are updated in the collection:
+            - hv_gad_facts: Added GAD Pair facts for direct connection type.
+            - hv_gad: Added multiple operations for GAD pair for direct connection type; Increased GAD pair volumes size support; SVOL naming enhancements.
+            - hv_hg: Added auto-generated name for create hostgroup tasks.
+            - hv_hur_fact: Added HUR Pair facts for direct connection type.
+            - hv_hur: Added multiple operations for HUR pair for direct connection type; Increased HUR pair volumes size support.
+            - hv_iscsi_target: Added auto-generated name for create iSCSI target task.
+            - hv_ldev_facts: Added encryption status in LDEV facts.
+            - hv_ldev: Added QoS settings and shredding option; enhanced LDEV ID setting.
+            - hv_snapshot: Enhanced SVOL naming logic.
+            - hv_storagepool_facts: Added encryption status.
+            - hv_system_facts: Added refresh parameter.
+            - hv_truecopy_fact: Added TrueCopy pair facts for direct connection type.
+            - hv_truecopy: Added multiple operations for TrueCopy pair for direct connection type; Enhanced SVOL ID setting.
+            - others: Enhanced log messages; Added warnings for unsupported OOB features; Usage information collection to AWS with user consent.
   3.1.0:
-    release_date: '2024-10-07'
+    release_summary: "This is a minor release of the ``hitachivantara.vspone_block`` collection. This changelog includes all new modules that are added to collection. This also contains all changes to the modules and plugins in this collection that have been made after the previous release."
+    release_date: "2024-10-07"
     changes:
-      major_changes:
-        - "Added module hv_sds_block_vps_fact"
-        - "Added module hv_sds_block_vps"
-        - "Added module hv_gad_fact"
-        - "Added module hv_gad"
-        - "Added module hv_gateway_subscription_facts"
-        - "Added module hv_gateway_unsubscribe_resource"
-        - "Added module hv_hur_facts"
-        - "Added module hv_hur"
-        - "Added module hv_nvm_subsystems_facts"
-        - "Added module hv_storage_port_facts"
-        - "Added module hv_storage_port"
-        - "Added module hv_storagepool"
-        - "Added module hv_truecopy_facts"
-        - "Added module hv_truecopy"
       minor_changes:
-        - "hv_sds_block_compute_node: Manage Compute Node with NVMe-TCP connection"
-        - "hv_sds_block_compute_node_facts: Get Compute Node with NVMe-TCP details"
-        - "hv_sds_block_volume: Create and Update Volume with QoS Settings"
-        - "hv_sds_block_volume_facts: Get NVMe-TCP volume details; Get detailed Compute Node and QoS information"
-        - "others: Renamed module: hv_lun -> hv_ldev; Updated parameter names: lun -> ldev, pvol -> primary_volume_id, svol -> secondary_volume_id"
-        - "hv_ldev: Enhanced deletion and provisioning workflows"
-        - "hv_ldev_facts: Added detailed LDEV information retrieval"
-        - "hv_snapshot: Enhanced Thin Image creation and management"
+        - The following modules are added to the collection:
+            - hv_sds_block_vps: This module is used to create, update, and delete VPS.
+            - hv_gad: This module is used to create, update, and delete GAD pairs.
+            - hv_hur: This module is used to create, update, and delete HUR pairs.
+            - hv_gateway_unsubscribe_resource: This module is used to unsubscribe resources.
+            - hv_storage_port: This module is used to update storage port settings.
+            - hv_storagepool: This module is used to create, update, and delete storage pools.
+            - hv_truecopy: This module is used to create, update, and delete TrueCopy pairs.
+        - The following facts modules are added in the collection:
+            - hv_sds_block_vps_fact: This module is used to get facts about VPS.
+            - hv_gad_fact: This module is used to get facts about GAD pairs.
+            - hv_hur_fact: This module is used to get facts about HUR pairs.
+            - hv_gateway_subscription_facts: This module is used to get facts of a subscriber.
+            - hv_nvm_subsystems_facts: This module is used to get facts about NVM subsystems.
+            - hv_storage_port_facts: This module is used to get facts about storage ports.
+            - hv_truecopy_facts: This module is used to get facts about TrueCopy pairs.
+        - The following modules are updated in the collection:
+            - hv_sds_block_compute_node: Manage Compute Node with NVMe-TCP connection.
+            - hv_sds_block_compute_node_facts: Get Compute Node with NVMe-TCP details.
+            - hv_sds_block_volume: Create and Update Volume with QoS Settings.
+            - hv_sds_block_volume_facts: Get NVMe-TCP volume details; Get detailed Compute Node and QoS information.
+            - hv_ldev: Enhanced deletion and provisioning workflows.
+            - hv_ldev_facts: Added detailed LDEV information retrieval.
+            - hv_snapshot: Enhanced Thin Image creation and management.
+            - others: Renamed module hv_lun to hv_ldev, Updated parameter names lun to ldev, pvol to primary_volume_id, svol to secondary_volume_id.
   3.0.1:
+    release_summary: "This is a minor release of the ``hitachivantara.vspone_block`` collection. This release contains only bug fixes."
+    release_date: "2024-07-15"
     changes:
       bugfixes:
-        - "Fixed multiple session auth issue for direct connect type"
-        - "Fixed Python older version compatibility issues"
-        - "Fixed incorrect compute node information retrieval in hv_sds_block_compute_node_facts"
-        - "Fixed LDEV ID retrieval issue in hv_lun_facts"
+        - Fixed multiple session auth issue for direct connect type.
+        - Fixed Python older version compatibility issues.
+        - Fixed incorrect compute node information retrieval in hv_sds_block_compute_node_facts.
+        - Fixed LDEV ID retrieval issue in hv_lun_facts.
   3.0.0:
-    release_date: '2024-06-17'
+    release_summary: "This is a minor release of the ``hitachivantara.vspone_block`` collection. This changelog includes all new modules that are added to collection. This also contains all changes to the modules and plugins in this collection that have been made after the previous release."
+    release_date: "2024-06-17"
     changes:
-      major_changes:
-        - "Added module hv_sds_block_chap_user_facts"
-        - "Added module hv_sds_block_chap_user"
-        - "Added module hv_sds_block_compute_node_facts"
-        - "Added module hv_sds_block_compute_node"
-        - "Added module hv_sds_block_compute_port_authentication"
-        - "Added module hv_sds_block_storage_system_fact"
-        - "Added module hv_sds_block_volume_facts"
-        - "Added module hv_sds_block_volume"
-        - "Added module hv_gateway_admin_password"
-        - "Added module hv_gateway_subscriber_fact"
-        - "Added module hv_gateway_subscriber"
-        - "Added module hv_hg_facts"
-        - "Added module hv_hg"
-        - "Added module hv_iscsi_target_facts"
-        - "Added module hv_iscsi_target"
-        - "Added module hv_lun_facts"
-        - "Added module hv_lun"
-        - "Added module hv_paritygroup_facts"
-        - "Added module hv_shadow_image_pair_facts"
-        - "Added module hv_shadow_image_pair"
-        - "Added module hv_snapshot_facts"
-        - "Added module hv_snapshot"
-        - "Added module hv_storagepool_facts"
-        - "Added module hv_storagesystem_facts"
-        - "Added module hv_storagesystem"
-        - "Added module hv_system_facts"
-        - "Added module hv_troubleshooting_facts"
-        - "Added module hv_uaig_token_fact"
+      minor_changes:
+        - The following modules are added to the collection:
+            - hv_sds_block_chap_user
+            - hv_sds_block_compute_node
+            - hv_sds_block_compute_port_authentication
+            - hv_sds_block_volume
+            - hv_gateway_admin_password
+            - hv_hg
+            - hv_iscsi_target
+            - hv_lun
+            - hv_shadow_image_pair
+            - hv_snapshot
+            - hv_storagesystem
+        - The following facts modules are added in the collection:
+            - hv_sds_block_chap_user_facts
+            - hv_sds_block_compute_node_facts
+            - hv_sds_block_storage_system_fact
+            - hv_sds_block_volume_facts
+            - hv_gateway_subscriber_fact
+            - hv_snapshot_facts
+            - hv_iscsi_target_facts
+            - hv_lun_facts
+            - hv_paritygroup_facts
+            - hv_shadow_image_pair_facts
+            - hv_storagepool_facts
+            - hv_storagesystem_facts
+            - hv_system_facts
+            - hv_troubleshooting_facts
+            - hv_uaig_token_facts
