--- a/.github/workflows/docs-linting.yml
+++ b/.github/workflows/docs-linting.yml
@@ -1,40 +1,42 @@
 ---
+name: Lint extra docsite docs and links
+on:
+  # Run CI against all pushes (direct commits, also merged PRs), Pull Requests
+  push:
+    branches:
+      - main
+  pull_request:
+  # Run CI once per day (at 06:00 UTC)
+  # This ensures that even if there haven't been commits that we are still
+  # testing against latest version of ansible-test for each ansible-core
+  # version
+  schedule:
+    - cron: "0 6 * * *"
+
+jobs:
+  docsite:
     name: Lint extra docsite docs and links
-    on:
-      # Run CI against all pushes (direct commits, also merged PRs), Pull Requests
-      push:
-        branches:
-          - main
-      # Run CI once per day (at 06:00 UTC)
-      # This ensures that even if there haven't been commits that we are still testing against latest version of ansible-test for each ansible-base version
-      schedule:
-        - cron: '0 6 * * *'
-    
-    jobs:
-      docsite:
-        name: Lint extra docsite docs and links
-        permissions:
-          contents: read
-        runs-on: ubuntu-latest
-        steps:
-    
-          - name: Check out code
-            uses: actions/checkout@v4
-    
-          - name: Set up Python
-            uses: actions/setup-python@v4
-            with:
-              python-version: '3.13'
-    
-          - name: Install ansible-core and antsibull-docs
-            run: pip install ansible-core antsibull-docs --disable-pip-version-check
-    
-          # OPTIONAL If your collection depends on other collections, make sure to install them here
-          # - name: Install dependent collections
-          #   run: >
-          #     ansible-galaxy collection install
-          #     ansible.netcommon
-          #     ansible.utils
-    
-          - name: Run collection docs linter
-            run: antsibull-docs lint-collection-docs . --plugin-docs --skip-rstcheck
+    permissions:
+      contents: read
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.13"
+
+      - name: Install ansible-core and antsibull-docs
+        run: pip install ansible-core antsibull-docs --disable-pip-version-check
+
+      # OPTIONAL If your collection depends on other collections, make sure to install them here
+      # - name: Install dependent collections
+      #   run: >
+      #     ansible-galaxy collection install
+      #     ansible.netcommon
+      #     ansible.utils
+
+      - name: Run collection docs linter
+        run: antsibull-docs lint-collection-docs . --plugin-docs --skip-rstcheck
